# free-fighting-engine

src/: 2xsai.c  2xsai.h  CMakeLists.txt  aastr.h  almp3.h  auto_conf.c  auto_conf.h  background_output.c  background_output.h  background_process.c  background_process.h  battle_output.c  battle_output.h  battle_process.c  battle_process.h  choice_output.c  choice_output.h  choice_process.c  choice_process.h  config.h  effects.c  effects.h  global.h  global_add.h  initfiles.c  initfiles.h  inits.h  input_reader.c  input_reader.h  keyconfig_output.c  keyconfig_output.h  keyconfig_process.c  keyconfig_process.h  load_characters.c  load_characters.h  load_fight_fx.c  load_fight_fx.h  load_sprites.c  load_sprites.h  loader.c  (+48 more)
